<resources>
    <string name="app_name">My Demos</string>

    <string-array name="alphabates">
        <item> aaa </item>
        <item> bbb </item>
        <item> ccc </item>
    </string-array>

    <string-array name="aaa">
        <item> 1 </item>
        <item> 2 </item>
        <item> 3 </item>
    </string-array>

    <string-array name="bbb">
        <item> 4 </item>
        <item> 5 </item>
        <item> 6 </item>
    </string-array>

    <string-array name="ccc">
        <item> 7 </item>
        <item> 8 </item>
        <item> 9 </item>
    </string-array>
    <string name="title_activity_bottom_sheet">BottomSheet</string>
    <string name="start_recording">Start Recording</string>

    <string name="large_text">
        This is a long multiline text. This text has many lines.
        This is just a sample text for demo purpose. This is not written for formal use.
        Please ignore if any spelling mistakes found. There is no third party library used for performing this animation.
    </string>

    <string name="language_text"> English </string>
    <string name="change_language"> Change Language </string>
    <string name="input_restrict_demo"> Input Restriction Demo </string>

    <string name="language_restriction_demo_description"> Language description demo Description </string>
    <string name="crop_image"> Crop Image Demo </string>
    <string name="crop_image_desc"> Pick Image From Gallary. Crop It and Set It to Image View </string>
    <string name="aws_sns"> AWS SNS </string>
    <string name="drawer_demo"> Drawer Demo </string>
    <string name="title_activity_drawer_demo">DrawerDemoActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sms_retriever_api">SMS Retriever API</string>
    <string name="sms_retriever_api_desc">This is demo for retrieving OTP using sms Retriever API</string>
    <string name="mobile_no">Mobile No</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="draw_text">Draw Text On Image</string>
    <string name="recv_with_checkbox">Recycler View with Checkbox</string>
    <string name="custome_progress_bar">Custom Progress Bar</string>
    <string name="lt"> &lt; </string>
    <string name="gt"> &gt; </string>

    <string name="marathi_long_text">
        प्रत्येक व्यक्ती जन्मतः वेगळी आणि विशेष आहे. प्रत्येकाच्यात एक वेगळी खासियत आहे जिच्यामुळे आपण इतरांपेक्षा वेगळे असतो.
        हा वेगळेपणाच ठरवतो कि आपण कोण आहोत, कसे आहोत आणि एखाद्या परिस्थितीत आपण कसे वागतो.
        बहुतेकवेळा ज्या विशेषतांमुळे आपले नुकसान होते त्यांच्या प्रती आपण जागृत असतो, संवेदनशील असतो.
        मग त्यांच्यामुळे आपल्यात न्यूनगंड येतो. पण आपण हे जाणतो कि येथे प्रत्येक व्यक्ती एकमेवाद्वितीय आहे, बस गरज आहे ती आपली अंतर्गत क्षमता जागवण्याची आणि व्यक्तिमत्व सुधारण्याची.
        इथेच व्यक्तिमत्व विकासाच्या प्रक्रिया मदत करणे सुरु करतात. व्यक्तिमत्व विकासामुळे आळस आणि, अनुत्साह आणि निरसतेमध्ये अडकलेली व्यक्ती कार्यक्षम, उत्साही, प्रसन्न आणि आपल्या ध्येयाने प्रेरित व्यक्ती बनते.
        व्यक्तिमत्व विकासाच्या प्रक्रियेमध्ये व्यक्ती आपल्या वैशिष्ट्यांना कोणत्याही प्रतिकाराशिवाय आणि आपल्या सीमांच्या बंधनांना त्यागने शिकतो, आनंदी राहणे शिकतो आणि हे सर्व अधिक उत्साहाने आणि चैतन्याने करतो.
    </string>
    <string name="client_id">1051258036378-3a1qvtnd430djerkk39j5s21t755u1n2.apps.googleusercontent.com</string>

</resources>